--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-webmvc</artifactId>
+  		<version>5.1.6.RELEASE</version>
+	</dependency>
+    <dependency>
 		<groupId>org.springframework</groupId>
 		<artifactId>spring-context</artifactId>
 		<version>5.1.6.RELEASE</version>
